# PLI

./: .gitignore  CMakeLists.txt  build32.sh  build64.sh  build_optimal.sh  data_prepare.cpp  data_prepare.sh  pgm_build.cpp  pgm_query.cpp  query32.sh  query64.sh  query_optimal.sh  test.cpp  test.sh
include/: config.hpp  data_partition.hpp  pgm_index.hpp  pgm_index_build.hpp  pgm_index_query.hpp  tools.hpp
